fix: fixed text alignment in post link buttons

--- a/app/styles/layout.css
+++ b/app/styles/layout.css
@@ -26,7 +26,7 @@
   padding: 1rem;
 }
 
-.container>h1:first-child {
+.container > h1:first-child {
   margin: 0 auto 0 auto;
 }
 
@@ -59,7 +59,7 @@
   min-width: var(--control-default-height);
 }
 
-.control-size-square>svg {
+.control-size-square > svg {
   font-size: x-large;
 }
 
@@ -93,7 +93,7 @@
   flex-direction: row;
 }
 
-.control-row>*:not(:last-child) {
+.control-row > *:not(:last-child) {
   margin-right: 0.5rem;
 }
 
@@ -143,6 +143,10 @@
 .flex-column {
   display: flex;
   flex-direction: column;
+}
+
+.justify-content-start {
+  justify-content: start;
 }
 
 .justify-content-center {
